[gd_scene load_steps=4 format=2]

[ext_resource path="res://elements/MsgDialog.gd" type="Script" id=1]
[ext_resource path="res://menus/msgFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/buttonFont.tres" type="DynamicFont" id=3]

[node name="MsgDialog" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
self_modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
margin_left = 373.0
margin_top = 316.0
margin_right = 2187.0
margin_bottom = 1124.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1807.0
margin_bottom = 801.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 100
alignment = 1

[node name="MsgText" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 1800.0
margin_bottom = 491.0
rect_min_size = Vector2( 1800, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Something happened"
align = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 591.0
margin_right = 1800.0
margin_bottom = 794.0
custom_constants/margin_bottom = 50

[node name="OkayButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/MarginContainer"]
margin_left = 500.0
margin_right = 1300.0
margin_bottom = 153.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 3 )
text = " Okay "

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/MarginContainer/OkayButton" to="." method="_on_OkayButton_pressed"]
